# ai-taste

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
apps/a2a_warehouse_manager_agent/warehouse_manager_agent/: agent.py  agent_executor.py  app.py
apps/adk_warehouse_manager_agent/warehouse_manager_agent/: agent.py  tools.py
apps/api/: pyproject.toml
apps/api/evals/: eval_coordinator_agent.py  eval_retriever.py
apps/chatbot_ui/: pyproject.toml
apps/items_mcp_server/: pyproject.toml
apps/reviews_mcp_server/: pyproject.toml
apps/reviews_mcp_server/src/reviews_mcp_server/: main.py  utils.py
notebooks/part_0/: 01-llm-apis.ipynb
notebooks/part_1/: 01-explore-amazon-dataset.ipynb  04-evaluation-dataset.ipynb
notebooks/part_2/: 02-Structured-Outputs-RAG-Pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb
notebooks/part_2/prompts/: retrieval_generation.yaml
notebooks/part_3/: 01-LangGraph-Intro.ipynb  02-Query-Rewriting.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb  06-Tool-Calling.ipynb
notebooks/part_4/: 01-Multi-Turn-Agent.ipynb  02-Multiple-Tools.ipynb  04-MCP.ipynb
notebooks/part_5/: 01-Shopping-Cart-Agent-Tools.ipynb  02-Shopping-Cart-Agent.ipynb  04-Warehouse-Agent-Database.ipynb  05-Warehouse-Agent-Tools.ipynb  06-Warehouse-Manager-Agent.ipynb
notebooks/part_6/: 01-LiteLLM-Router.ipynb  02-Warehouse-Agent-ADK.ipynb  04-Warehouse-Agent-A2A-LangGraph.ipynb  06-Prompt-Caching-Agent.ipynb
notebooks/part_7/: 03-CI-Quality-Gates.ipynb
notebooks/week_1/: 02-RAG-preprocessing-amazon.ipynb  03-RAG-pipeline.ipynb  05-RAG-Evals.ipynb
notebooks/week_2/: 01-Structured-Outputs-Intro.ipynb  05-Prompt-Versioning.ipynb
notebooks/week_3/: 01-LangGraph-Intro.ipynb  05-LangGraph-LangChain.ipynb
notebooks/week_4/: 03-Human-Feedback.ipynb  05-State-Streaming.ipynb
notebooks/week_5/: 03-Coordinator-Agent.ipynb  06-Warehouse-Manager-Agent.ipynb
notebooks/week_6/: 03-Warehouse-Agent-A2A.ipynb  05-Prompt-Caching.ipynb
notebooks/week_7/: 01-Human-In-The-Loop.ipynb  02-Coordinator-Evaluation.ipynb
scripts/sql/: shopping_cart_table.sql  warehouse_management.sql
src/: app.py
(+26 files in other folders)
