[project]
name = "ai-taste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.68.0",
    "groq>=1.1.1",
    "ipykernel>=7.2.0",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]

[dependency-groups]
dev = [
    "cohere>=6.1.0",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.7.24",
    "matplotlib>=3.10.8",
    "psycopg2-binary>=2.9.12",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
]
