[project]
name = "ai-eshop-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.68.0",
    "groq>=1.1.1",
    "ipykernel>=7.2.0",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
    "apps/items_mcp_server",
    "apps/reviews_mcp_server",
]

[dependency-groups]
dev = [
    "a2a-sdk>=1.0.3",
    "cohere>=6.1.0",
    "fastmcp>=3.2.4",
    "google-adk>=1.25",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.7.24",
    "litellm>=1.85.0",
    "matplotlib>=3.10.8",
    "psycopg2-binary>=2.9.12",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
]
