[project]
name = "reviews-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yonko Shanks", email = "kbaizhigit@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.4",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
